# Scope

./: .Classes_Input.py.swp  .Classes_System.py.swp  .gitignore  6-QEinputs_Iso.py  7-G16Inputs_iso.py  AGENTS.md  Adapted_from_cell2mol.py  Alternative_Sys_Classes.py  Bibliography.py  CShM.py  Classes_Cell.py  Classes_Cif.py  Classes_Data.py  Classes_Environment.py  Classes_Input.py  Classes_Job.py  Classes_Molecule.py  Classes_QC.py  Classes_Queue.py  Classes_SCO.py  Classes_Specie.py  Classes_Spin.py  Classes_State.py  Classes_State_Backup.py  Classes_System.py  Connectivity.py  Constants.py  Control_Jobs.py  Elementdata.py  Environment.py  Findiff.py  Generate_Representations.py  Geom_SCO_V1.py  Geometry.py  Gmol_ops.py  LICENSE  Old_Generate_Representations.py  Other.py  Parse_Cif.py  Parse_G16_outputs.py  (+25 more)
.github/: copilot-instructions.md
.github/workflows/: tutorial-tests.yml
Cell2mol_Utils/: compare_species.py
Deprecated/: writeinputs_V0.py
Input_Systems/: Periodic_XYZ.py
Operations/: Vecs_and_Mats.py
Scope_New/: Bibliography.py  Classes_Cell.py  Classes_Data.py  Classes_QC.py  Classes_Queue.py  Classes_Specie.py  Classes_State.py  Classes_System.py  Constants.py  Database.py  Other.py  Parse_Cif.py  Read_Write.py  Register_Data.py  VNM_tools.py  __init__.py
Scope_New/Input_Systems/: XYZ.py
Scope_New/Operations/: Vecs_and_Mats.py
Scope_New/Software/Gaussian/: Parse_G16_outputs.py  Write_G16_Inputs.py  old_g16_class
Scope_New/Software/Quantum_Espresso/: Parse_QE_outputs.py  QE_Class_Output.py  Write_QE_Inputs.py
Scope_New/Spin_Crossover/: __init__.py
Scope_New/Spin_Crossover/cli/: create_many_cell2mol.py
Scope_New/Utils/: Core_tools.py  Execute_Job.py  Extract_Data.py  __init__.py
Scope_New/Workflow/: Branch.py  Computation.py  Job.py  Recipe.py
Software/Gaussian/: G16_Class_Output.py  Parse_G16_outputs.py  Write_G16_Inputs.py
Software/Quantum_Espresso/: Parse_QE_outputs.py  QE_Class_Output.py  Write_QE_Inputs.py
Spin_Crossover/: SCO_Classes.py  SCO_Functions.py
Spin_Crossover/cli/: create_from_cell2mol.py  create_many_cell2mol.py
Utils/: Core_tools.py  Execute_Job.py  Extract_Data.py  Load_Environment.py  last_execute.py  old_execute.py
Workflow/: Branch.py  Computation.py  Job.py  Recipe.py
azo/: README.md  pyproject.toml
azo/src/scope_azo/: __init__.py  azo_classes.py  azo_classes_old.py  azo_functions.py  azo_functions_old.py  test.ipynb  tmp_azo_plots.py
azo/src/scope_azo/cli/: create_single.py  main.py
azo/src/scope_azo/lamp_data/: coolled.json  dark.json  default.json  test.json
bug_fixes/: README.md
bug_fixes/0.9.5/: state_parents.ipynb
bug_fixes/0.9.5/State_Parents/: bug_details.ipynb  report.md
cli/: configure_scope.py  create_systems_from_cell2mol.py  scope_cell2mol_to_sco.py  scope_config.py  scope_many_cell2mols_to_scope.py
core/: .pypirc.swp  MANIFEST.in  README.md  pyproject.toml
core/src/scope/: __init__.py  classes_atom.py  classes_cell.py  classes_cif.py  classes_data.py  classes_environment.py  classes_input.py  classes_qc.py  classes_queue.py  classes_specie.py  classes_state.py  classes_system.py  classes_workflow.py  connectivity.py  constants.py  elementdata.py  findiff.py  geometry.py  other.py  other_backup.py  read_write.py  reconstruct.py  register_data.py  test_Svib.ipynb  thermal_corrections.py  thermodynamics.py  vnm_tools.py
core/src/scope/cli/: config.py  create_many.py  create_single.py  main.py  run.py  run_task.py  set_path.py
core/src/scope/operations/: graphs.py  vecs_and_mats.py
core/src/scope/software/gaussian/: __init__.py  g16_input.py  g16_output.py  g16_parse.py
core/src/scope/software/quantum_espresso/: __init__.py  qe_functions.py  qe_input.py  qe_output.py
core/src/scope/spin_crossover/: __init__.py
core/src/scope/spin_crossover/cli/: create_from_cell2mol.py  get_t12.py
core/src/scope/utils/: run_task.py
docs/: architecture.md  bug_fixing.md  coding_style.md  concepts.md
sco/: README.md  pyproject.toml
sco/src/scope-sco/: sco_classes.py  sco_functions.py
sco/src/scope-sco/cli/: create_many_cell2mol.py
sco/src/scope_sco/: __init__.py  sco_classes.py  sco_functions.py  sco_structure.py
sco/src/scope_sco/cli/: create_from_cell2mol.py  create_many.py  create_many_cell2mol.py  create_single.py  get_t12.py  main.py
src/: Classes_Input.py  Classes_QC.py  Reconstruct.py
src/Scope/: Bibliography.py  Classes_Atom.py  Classes_Cell.py  Classes_Cif.py  Classes_Data.py  Classes_Environment.py  Classes_Input.py  Classes_QC.py  Classes_Queue.py  Classes_Specie.py  Classes_Spin.py  Classes_State.py  Classes_System.py  Classes_Workflow.py  Connectivity.py  Findiff.py  Geometry.py  Other.py  Parse_Cif.py  Parse_General.py  Read_Write.py  Reconstruct.py  Register_Data.py  Thermal_Corrections.py  VNM_tools.py  __init__.py
src/Scope/Input_Systems/: Periodic_XYZ.py  XYZ.py
src/Scope/Spin_Crossover/: SCO_Classes.py  SCO_Functions.py  SCO_Structure.py  __init__.py
src/Scope/Utils/: Execute_Job.py  Run_Job.py  __init__.py
src/Scope/Workflow/: Branch.py  Computation.py  Job.py  (+1 more)
src/Spin_Crossover/: SCO_Classes.py  SCO_Structure.py
src/Workflow/: Recipe.py  __init__.py
src/scope/: __init__.py  bibliography.py  classes_atom.py  classes_cell.py  classes_cif.py  classes_data.py  classes_environment.py  classes_input.py  classes_qc.py  classes_queue.py  classes_specie.py  classes_state.py  classes_system.py  classes_workflow.py  connectivity.py  cshm.py  findiff.py  other.py  parse_cif.py  read_write.py  reconstruct.py  register_data.py  thermal_corrections.py  vnm_tools.py
tutorials/: 0-Navigate_Molecule_Hierarchy.ipynb  1-Navigate_Computation_Hierarchy.ipynb  1-Navigate_Workflows.ipynb  1-Tutorial_1.ipynb  2-State_Class.ipynb  2-Tutorial_2.ipynb  3-Thermodynamics_and_Data_Class.ipynb  3-Tutorial_3.ipynb  4-Simple_Job_Preparation.ipynb  4-Tutorial_4.ipynb  5-Advanced_Job_Preparation.ipynb  5-Tutorial_5.ipynb  6-Tutorial_6.ipynb  7-Tutorial_7.ipynb  8-Tutorial_8.ipynb  9-Tutorial_9.ipynb  conftest.py  tests_during_tutorials.ipynb
tutorials/Data/: ABITEM.npy
(+66 files in other folders)
