[project]
name = "scope"
version = "0.0.0"
description = "Temporary test package"
authors = [{ name = "Sergi Vela", email = "sergi.vela@iqac.csic.es" }]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "rdkit",
    "platformdirs",
    "cell2mol @ git+https://github.com/lcmd-epfl/cell2mol.git",
]

[project.optional-dependencies]
jupyter   = ["ipykernel", "plotly", "nbformat"]
tutorials = ["jupyter","matplotlib"]
dev       = ["plotly","pytest","nbval","pytest-cov","pre-commit"]

# Where your CLI entry point lives
[project.scripts]
# General
scope_config             = "Scope.cli.config_environment:main"
scope_run_job            = "Scope.cli.run_job:main"
# Spin_Crossover Related
scope_sco_single         = "Scope.Spin_Crossover.cli.create_from_cell2mol:main"
scope_sco_many           = "Scope.Spin_Crossover.cli.create_many_cell2mol:main"

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools]
include-package-data = false

[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--nbval --current-env --disable-warnings -q"
testpaths = [
    "tutorials/0-Navigate_Molecule_Hierarchy.ipynb",
    "tutorials/1-Navigate_Computation_Hierarchy.ipynb",
    "tutorials/2-State_Class.ipynb",
    "tutorials/3-Thermodynamics_and_Data_Class.ipynb",
]
