[project]
name = "scope"
version = "0.0.0"
description = "Temporary test package"
authors = [{ name = "Sergi Vela", email = "sergi.vela@iqac.csic.es" }]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "networkx<3.3",
    "scipy",
    "rdkit",
    "platformdirs",
    "cell2mol @ git+https://github.com/lcmd-epfl/cell2mol.git",
]

# Where your CLI entry point lives
[project.scripts]
# General
scope                    = "scope.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools]
include-package-data = false

[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"
