[project]
name = "scope-qc"
version = "0.9.5"
description = "SCOPE: Chemically-aware workflow automation for molecules and molecular crystals. Core package"
readme = "README.md"
authors = [{ name = "Sergi Vela", email = "sergi.vela@iqac.csic.es" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy",
    "networkx<3.3",
    "scipy",
    "rdkit",
    "ipykernel",
    "plotly",
    "nbformat",
    "jupyter", 
    "matplotlib",
    "platformdirs",
]

# Where your CLI entry point lives
[project.scripts]
# General
scope                    = "scope.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scope" = ["cshm.yaml"]
"scope.software.quantum_espresso" = [
    "PP_Libraries/Vanderbilt_USPP/*.UPF",
    "PP_Libraries/Vanderbilt_USPP/*.upf",
    "PP_Libraries/Vanderbilt_USPP/*.json",
]

[tool.setuptools]
include-package-data = false

[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"
