[project]
name = "scope-sco"
version = "0.9.0"
description = "Spin-crossover add-on for SCOPE"
readme = "README.md"
authors = [{ name = "Sergi Vela", email = "sergi.vela@iqac.csic.es" }]
requires-python = ">=3.10"
dependencies = [
    "scope",
]

# Where your CLI entry point lives
[project.scripts]
scope_sco = "scope_sco.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools]
include-package-data = false

[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"
